--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html>
 <head>
     <title>Simple Text Editor</title>
+    <style>
+        #editor { border: 1px solid #ccc; min-height: 200px; padding: 10px; font-family: Arial, sans-serif; }
+    </style>
 </head>
 <body>
     <div id="editor" contenteditable="true" placeholder="Start typing..."></div>
